Fixed Toggler Position on Mobile viewport.

--- a/css/styles.css
+++ b/css/styles.css
@@ -77,7 +77,7 @@ p {
     font-family: 'Ubuntu', sans-serif;
     font-size: 2.5rem;
     font-weight: bold;
-    padding-right: 45%;
+    padding-right: 42%;
 }
 
 .nav-item {
